made changes to dockerfile, added requirements.txt, and moved files from Deployment folder to root folder.

--- a/.github/workflow/deploy.yml
+++ b/.github/workflow/deploy.yml
@@ -9,10 +9,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - uses: akhileshns/heroku-deploy@v3.0.0
+      - name: Deploy to Heroku
+        uses: akhileshns/heroku-deploy@v3.0.0
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: "your_app_name" # {{secrets.HEROKU_APP_NAME}}
-          heroku_email: "your e-mail address associated with Heroku" # {{secrets.HEROKU_EMAIL}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
           usedocker: true
-          healthcheck: "https://[YOUR APP's NAME].herokuapp.com/health" # {{secrets.HEROKU_APP_NAME}}
+          healthcheck: "https://${{secrets.HEROKU_APP_NAME}}.herokuapp.com/health"
