--- a/.github/workflow/test.yml
+++ b/.github/workflow/test.yml
@@ -1,8 +1,7 @@
 name: Test
 on:
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   # This workflow contains a single job called "build"
@@ -52,11 +51,11 @@ jobs:
       #     WORKFLOW: ${{ secrets.WORKFLOW }}
       #   run: python manage.py migrate
       - name: Run Test # running tests
-        working-directory: ./backend
-        env:
-          # SECRET_KEY: ${{ secrets.SECRET_KEY }}
-          # DEBUG: ${{ secrets.DEBUG }}
-          # ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
-          # CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
-          # WORKFLOW: ${{ secrets.WORKFLOW }}
+        # working-directory: .
+        # env:
+        # SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        # DEBUG: ${{ secrets.DEBUG }}
+        # ALLOWED_HOSTS: ${{ secrets.ALLOWED_HOSTS }}
+        # CORS_ALLOWED_ORIGINS: ${{ secrets.CORS_ALLOWED_ORIGINS }}
+        # WORKFLOW: ${{ secrets.WORKFLOW }}
         run: pytest
