--- a/.github/workflow/test.yml
+++ b/.github/workflow/test.yml
@@ -40,7 +40,7 @@ jobs:
         working-directory: ./backend
         run: pip install -r requirements.txt
       - name: Check Syntax # check code formatting
-        run: pycodestyle --statistics .
+        run: pycodestyle --statistics flaskApp.py ./tests/test_app.py ./model/*
       # - name: Run Migrations # run migrations to create table in side car db container
       #   working-directory: ./backend
       #   env:
