--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,16 @@ autopep8==1.5.5
 click==7.1.2
 cycler==0.10.0
 Flask==1.1.2
+gunicorn==20.0.4
 iniconfig==1.1.1
 itsdangerous==1.1.0
 Jinja2==2.11.3
 kiwisolver==1.3.1
 MarkupSafe==1.1.1
 matplotlib==3.3.4
-numpy==1.19.5
+numpy==1.20.1
 packaging==20.9
+pandas==1.2.2
 Pillow==8.1.0
 plotly==4.14.3
 pluggy==0.13.1
